Add Rust example.